<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30sp"
            android:gravity="center"
            android:textSize="60sp"
            android:textStyle="bold"
            android:text="@string/tennisfamily" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:gravity="center"
            android:padding="15sp"
            android:layout_marginHorizontal="200sp"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStart"
            android:gravity="center"
            android:padding="15sp"
            android:layout_marginHorizontal="200sp"
            android:text="@string/settings" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>