<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/change_first_name" />

                <EditText
                    android:id="@+id/editPlayerLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPlayer1"
                    android:layout_marginHorizontal="50sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/player1_const" />

                <Button
                    android:id="@+id/btnChangeLeft"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="100sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editPlayerLeft"
                    android:text="@string/btnChange" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/change_second_name" />

                <EditText
                    android:id="@+id/editPlayerRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPlayer2"
                    android:layout_marginHorizontal="50sp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/player2_const" />

                <Button
                    android:id="@+id/btnChangeRight"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="100sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editPlayerRight"
                    android:text="@string/btnChange" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>